gccida/c3/build_real
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_real/src/tree.c:1066:12: error: expected expression
*( _OWORD *)&result->block.vars = *( _OWORD *)d.r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_real/src/tree.c:1066:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->block.vars = *( _OWORD *)d.r; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_real/src/tree.c:1066:46: error: expected expression
*( _OWORD *)&result->block.vars = *( _OWORD *)d.r; 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_real/src/tree.c:1066:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->block.vars = *( _OWORD *)d.r; 
                                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/build_real/src/obj/tree.o] Error 1
